[tool.poetry]
name = "tinytorch"
version = "0.0.1"
description = ""
authors = ["aspfohl <annaspfohl@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
python-mnist = "^0.7"
matplotlib = "^3.4.3"
datasets = "^1.16.1"
click = "^8.0.4"
numba = "^0.55.1"
numpy = "1.21.5"

[tool.poetry.dev-dependencies]
pytest = "6.0.1"
pytest-env = "^0.6.2"
pytest-runner = "5.2"
pytest-cov = "^2.12.1"
hypothesis = "^6.39.0"
flake8 = "3.8.3"
black = "19.10b0"
darglint = "^1.8.0"
isort = "^5.10.1"
pylint = "^2.12.2"
mypy = "^0.931"

[tools.flake8]
ignore="E203,W503,F401"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
